# run-length-encoding

./: .gitignore  CMakeLists.txt  README.md
src/: compress.cpp  decompress.cpp  funcs.h  main.cpp  usageInstruction.cpp
tests/: example.txt  test.txt
